--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,15 @@
  */
 
 /**
+ * 2: Components
+ */
+
+span.validation {
+  color: red;
+  display: block;
+}
+
+/**
  * Foundation for Sites
  * Version 6.6.3
  * https://get.foundation
